@@ -1,0 +1,1 @@
+cdecl @ /dev/null @ -xc++17 @ explain void f() throw() @ 0
