@@ -1,1 +1,1 @@
-cdecl @ /dev/null @ -xc++ @ explain void f() throw() @ 0
+cdecl @ /dev/null @ @ explain void f() throw() @ 65
