@@ -37,6 +37,9 @@ they print the type of scope ("class", "struct", "union", or "namespace"):
     c++decl> explain S::Int x
     declare x as Int of structure S
 
+** throw() deprecated/removed
+throw() has been deprecated starting with C++11 and removed in C++20.
+
 ** Fixed unknown type in typedef
 Fixed a crash caused by a case like:
 
